OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group_Member__c/Recipient_Group_Member__c.object-meta.xml
<CustomObject>
    <description>Defines an individual User or Contact&apos;s membership in a Recipient Group. Members inherit the usage and visibility permissions tied to the group and are included in all group-level operations.</description>
    <label>Recipient Group Member</label>
    <nameField>
        <displayFormat>RGM-{00000}</displayFormat>
        <label>Recipient Group Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipient Group Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>