OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group_Member__c/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <description>This field allows us to separate the user type we are selecting to be a part of the group. If it&apos;s an individual user, a group of users, a queue of users, or a Territory Role Assignment.</description>
    <inlineHelpText>Select the type of member this record represents — an individual User or a Territory Role Assignment. This controls which field below must be populated.</inlineHelpText>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Member_Type</valueSetName>
    </valueSet>
</CustomField>