OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group_Member__c/fields/Recipient_Group__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Group</label>
    <referenceTo>Recipient_Group__c</referenceTo>
    <relationshipLabel>Recipient Group Members</relationshipLabel>
    <relationshipName>Recipient_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>