OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group_Member__c/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To</fullName>
            </value>
            <value>
                <fullName>Cc</fullName>
            </value>
            <value>
                <fullName>BCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>