OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group_Member__c/fields/Recipient_User__c.field-meta.xml
<CustomField>
    <fullName>Recipient_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used only when Member Type is &quot;User.&quot; Leave blank for all other member types.</inlineHelpText>
    <label>Recipient User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recipient_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>