OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group_Member__c/fields/Role_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Role_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To support Territory Model roles</description>
    <inlineHelpText>Used only when Member Type is &quot;Territory Role Assignment.&quot; Leave blank for all other member types.</inlineHelpText>
    <label>Role Assignment</label>
    <referenceTo>Territory_Role_Assignment__c</referenceTo>
    <relationshipLabel>Recipient Group Members</relationshipLabel>
    <relationshipName>Recipient_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>