OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group_Member__c/validationRules/EnforceMemberTypeFieldUsage.validationRule-meta.xml
<ValidationRule>
    <fullName>EnforceMemberTypeFieldUsage</fullName>
    <active>true</active>
    <description>This field makes sure the user selects the right Member Type with the right user or role assignment.</description>
    <errorConditionFormula>OR(
  AND(
    ISPICKVAL(Member_Type__c, &quot;User&quot;),
    ISBLANK(Recipient_User__c)
  ),
  AND(
    ISPICKVAL(Member_Type__c, &quot;Territory Role Assignment&quot;),
    ISBLANK(Role_Assignment__c)
  ),
  AND(
    ISPICKVAL(Member_Type__c, &quot;User&quot;) = FALSE,
    NOT(ISBLANK(Recipient_User__c))
  ),
  AND(
    ISPICKVAL(Member_Type__c, &quot;Territory Role Assignment&quot;) = FALSE,
    NOT(ISBLANK(Role_Assignment__c))
  )
)</errorConditionFormula>
    <errorDisplayField>Member_Type__c</errorDisplayField>
    <errorMessage>Only the correct field should be populated based on the selected Member Type</errorMessage>
</ValidationRule>